Fix alignment of containers

--- a/_sass/custom/_base.scss
+++ b/_sass/custom/_base.scss
@@ -5,7 +5,7 @@ body {
 
 .container {
   @include outer-container;
-  padding: 0;
+  padding: 0 $base-spacing;
 }
 
 .main.container {
@@ -13,8 +13,6 @@ body {
 }
 
 main {
-  padding: $base-padding;
-  
   h1, h2, h3, h4, h5, h6 {
     margin: $base-spacing 0 $base-spacing/2 0;
   }
